--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,29 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+     <form class="search-form" id="search-form">
+      <input class="search-form__input"
+      type="text"
+      name="searchQuery"
+      autocomplete="off"
+      placeholder="Search images..."
+      />
+      <button class="search-form__button" type="submit">Search</button>
+    </form>
+    
+    <div class="gallery">
+      <!-- Картки зображень -->
+    </div>
+
+    <button type="button" class="load-more is-hidden">Load more</button>
+    <p class="text-Collections is-hidden">
+      We're sorry, but you've reached the end of search results.
+    </p>
+
+    <script src="./index.js" type="module"></script>
+
+
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!-- <include src="./partials/example.html"></include> -->
   </body>
 </html>
